# claro-lang

./: .bazelignore  .bazelrc  .gitignore  404.html  BUILD  CLARO_VERSION.txt  CNAME  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  chapter_1.html  claro_cloc_lang_definition.txt  codegen.sh  common_programming_concepts.html  concurrency.html  control_flow.html  cup_rule_diff.patch  generics.generated_docs.html  guaranteed_deadlock_free.html  maven_extension.bzl  maven_install.json  mermaid@10.6.1.min.js  non_module_deps.bzl  print.html  procedures.html  rules.bzl  rules_jvm_external~5.3~maven~maven_install.json  searchindex.js  searchindex.json
.devcontainer/: devcontainer.json
antlr/: BUILD  HelloLexer.g4  HelloParser.g4  README.md  TestParser.java  test.hello
chapter_1/: hello_world.generated_docs.html
claro-vim/: README.md
cli/: claro.sh  claroc.sh
copying/: BUILD  copying.generated_docs.html  ex1.claro  ex2.claro
error_handling/: BUILD  error_handling.generated_docs.html  ex1.claro  ex2.claro
examples/bzlmod/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE
examples/bzlmod/hello_world/: BUILD  hello_world.claro  hello_world.claro_module_api  test_hello_world.claro
examples/bzlmod/hello_world_with_module_demo/: BUILD  hello_world.claro  hello_world.claro_module_api  test_hello_world.claro
fearless_concurrency/: fearless_concurrency.html
getting_started/: getting_started.html
graph_procedures/: BUILD  ex1-setup.claro  ex1.claro  graph_procedures.generated_docs.html
guaranteed_data_race_free/: BUILD  ex1-setup.claro  ex1.claro  (+5 more)
(+1703 files in other folders)
